--- a/pom.xml
+++ b/pom.xml
@@ -32,4 +32,11 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+      <repository>
+        <id>github</id>
+        <name>GitHub Packages</name>
+        <url>https://maven.pkg.github.com/cjgwhite/result</url>
+      </repository>
+    </distributionManagement>
 </project>
