--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.phoundation</groupId>
-    <artifactId>Result</artifactId>
+    <artifactId>result</artifactId>
     <version>1.0</version>
 
     <properties>
