--- a/pom.xml
+++ b/pom.xml
@@ -39,4 +39,112 @@
         <url>https://maven.pkg.github.com/cjgwhite/result</url>
       </repository>
     </distributionManagement>
+    
+    <build>
+      <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+        </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>prepare-package</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+                <execution>
+                  <id>default-check</id>
+                  <goals>
+                    <goal>check</goal>
+                  </goals>
+                  <configuration>
+                    <haltOnFailure>true</haltOnFailure>
+                    <rules>
+                      <rule>
+                        <element>BUNDLE</element>
+                        <limits>
+                          <!--  implementation is needed only for Maven 2  -->
+      
+                          <limit implementation="org.jacoco.report.check.Limit">
+                            <counter>CLASS</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>1.0</minimum>
+                          </limit>
+                          <limit implementation="org.jacoco.report.check.Limit">
+                            <counter>METHOD</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>1.0</minimum>
+                          </limit>
+                          <limit implementation="org.jacoco.report.check.Limit">
+                            <counter>COMPLEXITY</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>1.0</minimum>
+                          </limit>
+                          <limit implementation="org.jacoco.report.check.Limit">
+                            <counter>BRANCH</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>1.0</minimum>
+                          </limit>
+                          <limit implementation="org.jacoco.report.check.Limit">
+                            <counter>LINE</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>1.0</minimum>
+                          </limit>
+                          <limit implementation="org.jacoco.report.check.Limit">
+                            <counter>INSTRUCTION</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>1.0</minimum>
+                          </limit>
+                        </limits>
+                      </rule>
+                    </rules>
+                  </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <version>3.21.2</version>
+            <executions>
+                <execution>
+                    <id>check</id>
+                    <phase>validate</phase>
+                    <goals>
+                        <goal>check</goal>
+                        <goal>cpd-check</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+            <version>3.3.1</version>
+            <configuration>
+                <configLocation>google_checks.xml</configLocation>
+                <suppressionsLocation>checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
+                <violationSeverity>warning</violationSeverity>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>checkstyle</id>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+      </plugins>
+    </build>
 </project>
